# weave-extras

./: .gitignore  README.md  autoprompt.py  evaluate.py  generate_sample_questions.py  index_data.py  main.py  model.py  pyproject.toml  query_docs.py  scorers.py  weaveindex.py
pages/: evaluate.py  generate_eval_data.py  guardrails.py  query_docs.py  semantic_entropy.py
weave_extras/: bias.py  cli.py  scorers.py
weave_extras/pages/: evaluate.py  generate_eval_data.py  guardrails.py  index_docs.py
